[MOD] : 홈페이지 디자인 변경

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -34,6 +34,8 @@
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_API_KEY%&libraries=services"
     ></script>
+    <!-- icon -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>React App</title>
   </head>
   <body>
