[MOD] : 판매자 수리사례 등록 수정2

--- a/webgyver/src/main/java/com/ssafy/webgyver/websocket/test/sellerFacetime.html
+++ b/webgyver/src/main/java/com/ssafy/webgyver/websocket/test/sellerFacetime.html
@@ -40,7 +40,10 @@
             };
 
             accept_meet = function () {
-                data = {'method': 'ACCEPT_MEET'}
+                data = {
+                    'method': 'ACCEPT_MEET',
+                    'time': '20230227-1030'
+                }
                 g_webSocket.send(JSON.stringify(data));
             }
         }
