[MOD] : 폭발머신 작동 중지

--- a/webgyver/src/main/java/com/ssafy/webgyver/websocket/test/customerChat.html
+++ b/webgyver/src/main/java/com/ssafy/webgyver/websocket/test/customerChat.html
@@ -7,6 +7,7 @@
     <script type="text/javascript">
         var g_webSocket = null;
         var websocket_address = "ws://localhost:9000/realtime/customer/1";
+        // var websocket_address = "ws://i8b101.p.ssafy.io:9000/realtime/customer/1";
         var categoryIdx = 1;
         var price = 99999;
         window.onload = async function () {
