[MOD] : RealTime object -> double로 거리 변경

--- a/webgyver/src/main/java/com/ssafy/webgyver/websocket/test/customerChat.html
+++ b/webgyver/src/main/java/com/ssafy/webgyver/websocket/test/customerChat.html
@@ -6,8 +6,8 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="text/javascript">
         var g_webSocket = null;
-        var websocket_address = "ws://localhost:9000/realtime/customer/1";
-        // var websocket_address = "ws://i8b101.p.ssafy.io:9000/realtime/customer/1";
+        // var websocket_address = "ws://localhost:9000/realtime/customer/1";
+        var websocket_address = "ws://i8b101.p.ssafy.io:9000/realtime/customer/1";
         var categoryIdx = 1;
         var price = 99999;
         window.onload = async function () {
@@ -22,7 +22,7 @@
                         'lat': Math.random(),
                         'address': '대전 서구 청사로 253',
                         'detailAddress': '111-2222',
-                        'title': '물이 안나와요',
+                        'title': '불이나와요',
                         'content': '아니 물이 나오다가 안나와요\n왜안나오는지는모르겠지만유\n손이 너무 더러운디 씻을수가 없어유\n',
                         'images': [{
                             "saveName": "test123",
