--- a/webgyver/src/main/java/com/ssafy/webgyver/websocket/test/sellerChat.html
+++ b/webgyver/src/main/java/com/ssafy/webgyver/websocket/test/sellerChat.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
         var g_webSocket = null;
         // var websocket_address = "ws://localhost:9000/realtime/seller/1";
-        var websocket_address = "ws://i8b101.p.ssafy.io:9000/realtime/customer/1";
+        var websocket_address = "ws://i8b101.p.ssafy.io:9000/realtime/seller/1";
 
         window.onload = async function () {
 
