[MOD] : 판매자 수리사례 수정 시 글 등록되는 현상 해결

--- a/webgyver/src/main/java/com/ssafy/webgyver/websocket/test/customerChat.html
+++ b/webgyver/src/main/java/com/ssafy/webgyver/websocket/test/customerChat.html
@@ -84,6 +84,7 @@
                     'method': 'CHANGE_DISTANCE',
                     'viewDistance': document.getElementById("viewDistance").value
                 })
+            console.log(11+data)
             g_webSocket.send(data);
         }
 
