--- a/webgyver/src/main/java/com/ssafy/webgyver/websocket/test/sellerChat.html
+++ b/webgyver/src/main/java/com/ssafy/webgyver/websocket/test/sellerChat.html
@@ -6,8 +6,8 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="text/javascript">
         var g_webSocket = null;
-        // var websocket_address = "ws://localhost:9000/realtime/seller/1";
-        var websocket_address = "ws://i8b101.p.ssafy.io:9000/realtime/seller/1";
+        var websocket_address = "ws://localhost:9000/realtime/seller/1";
+        // var websocket_address = "ws://i8b101.p.ssafy.io:9000/realtime/seller/1";
 
         window.onload = async function () {
 
@@ -18,8 +18,8 @@
                 const data = JSON.stringify(
                     {
                         'method': 'INIT',
-                        'lng': 4.56,
-                        'lat': 1.47,
+                        'lng': '4.56',
+                        'lat': '1.47',
                     }
                 );
                 console.log(data)
@@ -32,11 +32,10 @@
             g_webSocket.onmessage = function (message) {
                 const data = JSON.parse(message.data)
                 for (var i = 0; i < data.length; i++) {
-                    addLineToChatBox(JSON.stringify(data[i]));
+                    addLineToChatBox(data[i].title + " " + data[i].idx);
                     console.log(data[i])
                 }
-                console.log(data)
-
+                console.log('---------------------')
                 addLineToChatBox('-----------------------------');
             }
 
