--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -40,8 +40,9 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
     <title>Webgyver</title>
-    <link rel="shortcut icon" href="./favicon.ico" />
     <link rel="icon" href="./favicon.ico" />
+    <link rel="shortcut icon" href="./logo.png" />
+    <link rel="apple-touch-icon" href="./logo.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
